WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245971
assertIsCurrent(runloop) might create a runloop for no reason
https://bugs.webkit.org/show_bug.cgi?id=245971
Summary
assertIsCurrent(runloop) might create a runloop for no reason
Kimmo Kinnunen
Reported
2022-10-03 10:04:24 PDT
assertIsCurrent(runloop) might create a runloop for no reason
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-03 10:53:13 PDT
<
rdar://problem/100724480
>
Kimmo Kinnunen
Comment 2
2022-10-03 10:54:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4933
EWS
Comment 3
2022-10-04 09:24:38 PDT
Committed
255128@main
(4406377ea1be): <
https://commits.webkit.org/255128@main
> Reviewed commits have been landed. Closing PR #4933 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug