assertIsCurrent(runloop) might create a runloop for no reason https://bugs.webkit.org/show_bug.cgi?id=245971 rdar://problem/100724480

Reviewed by Antti Koivisto.

Add RunLoop::isCurrent() to query the RunLoop currentness.

* Source/WTF/wtf/RunLoop.cpp:
(WTF::RunLoop::isCurrent const):
(WTF::RunLoop::isMain): Deleted.
* Source/WTF/wtf/RunLoop.h:
(WTF::WTF_ASSERTS_ACQUIRED_CAPABILITY):

Canonical link: https://commits.webkit.org/255128@main